Improve vimperator template

--- a/templates/vimperator/vimp.erb
+++ b/templates/vimperator/vimp.erb
@@ -88,8 +88,9 @@ text-indent: 0 !important;
 }
 
 /*: Image opacity :*/
-img, svg             {opacity: .75 !important;}
-img:hover, svg:hover {opacity: 1 !important;}
+/* img, svg             {opacity: .75 !important;}
+ * img:hover, svg:hover {opacity: 1 !important;}
+ */
 
 /* Highlight */
 ::-moz-selection {
@@ -181,8 +182,9 @@ color: #<%= @base["02"]["hex"] %> !important;
 background: #<%= @base["06"]["hex"] %> !important;
 }
 
-input[type="image"] {opacity: .85 !important}
-input[type="image"]:hover {opacity: .95 !important}
+/* input[type="image"] {opacity: .85 !important}
+ * input[type="image"]:hover {opacity: .95 !important}
+ */
 
 /* Lightbox fix */
 html [id*="lightbox"] * {background-color: transparent !important;}
